# mhg-dl

./: .gitignore  README.md  downloader.py  fetcher.py  main.py  models.py  pyproject.toml
mhg_dl/: cli.py  config.py  fetcher.py  logger.py  main.py  manga_downloader.py  manga_fetcher.py  manga_seacher.py  models.py  unpacker.py
tests/: test_downloader.py  test_fetcher.py  test_logger.py  test_main.py  test_manga_downloader.py  test_manga_fetcher.py  test_manga_search.py  test_unpacker.py
