[project]
name = "mhg-dl"
version = "0.2.0"
description = "mhg-dl, a simple comic download tool for manhuagui.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "lzstring>=1.0.4",
    "requests>=2.32.5",
]
license = { file = "LICENSE" }
[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
[project.scripts]
mhg-dl = "mhg_dl.cli:main"
